# libdsp

./: README.md  build_purec_lib.sh  demo.c  nds_version.c  source_file_list
testsuite/basic/f32/: Makefile  Makefile.am  Makefile.in  abs_f32.m  clip_f32.m  neg_f32.m  offset_f32.m  scale_f32.m  t_abs_f32.c  t_clip_f32.c  t_neg_f32.c  t_offset_f32.c  t_scale_f32.c
testsuite/basic/q15/: Makefile  Makefile.am  Makefile.in  abs_q15.m  neg_q15.m  offset_q15.m  q2int_q15.m  scale_q15.m  shift_q15.m  t_abs_q15.c  t_clip_q15.c  t_neg_q15.c  t_offset_q15.c  t_scale_q15.c  t_shift_q15.c
testsuite/basic/q31/: Makefile  Makefile.am  Makefile.in  abs_q31.m  neg_q31.m  offset_q31.m  scale_q31.m  shift_q31.m  t_abs_q31.c  t_clip_q31.c  t_neg_q31.c  t_offset_q31.c  t_scale_q31.c  t_shift_q31.c
testsuite/basic/q7/: Makefile  Makefile.am  Makefile.in  abs_q7.m  int2q_q7.m  neg_q7.m  offset_q7.m  offset_u8.m  scale_q7.m  scale_u8.m  shift_q7.m  shift_u8.m  t_abs_q7.c  t_clip_q7.c  t_neg_q7.c  t_offset_q7.c  t_offset_u8.c  t_scale_q7.c  t_scale_u8.c  t_shift_q7.c  t_shift_u8.c
testsuite/basic/twoin_div/: Makefile  Makefile.am  Makefile.in  data_generator_q63.c  data_generator_u64.c  div_s64.m  div_u64.m  t_div_s64_u32.c  t_div_u64_u32.c
testsuite/basic/twoin_f32/: Makefile  Makefile.am  Makefile.in  add_f32.m  div_f32.m  dprod_f32.m  mul_f32.m  sub_f32.m  t_add_f32.c  t_div_f32.c  t_dprod_f32.c  t_mul_f32.c  t_sub_f32.c
testsuite/basic/twoin_q15/: Makefile  Makefile.am  Makefile.in  add_q15.m  divide_q15.m  dot_prod_q15.m  dot_prod_q7xq15.m  dot_prod_u8xq15.m  mult_q15.m  sub_q15.m  t_add_q15.c  t_and_u16.c  t_divide_q15.c  t_dprod_q15.c  t_dprod_q7xq15.c  t_dprod_u8xq15.c  t_mul_q15.c  t_not_u16.c  t_or_u16.c  t_sub_q15.c  t_xor_u16.c
testsuite/basic/twoin_q31/: Makefile  Makefile.am  Makefile.in  add_q31.m  and_u32.m  data_generator_f32.c  div_q31.m  dprod_q31.m  mult_q31.m  sub_q31.m  t_add_q31.c  t_and_u32.c  t_div_q31.c  t_divide_q31.c  t_dprod_q31.c  t_mul_q31.c  t_not_u32.c  t_or_u32.c  t_sub_q31.c  t_xor_u32.c
testsuite/basic/twoin_q7/: Makefile  Makefile.am  Makefile.in  add_q7.m  add_u8.m  data_generator_q7.c  dot_prod_q7.m  dot_prod_u8.m  mul_u8_u16.m  mult_q7.m  sub_q7.m  sub_u8.m  t_add_q7.c  t_add_u8_u16.c  t_and_u8.c  t_dprod_q7.c  t_dprod_u8.c  t_mul_q7.c  t_mul_u8_u16.c  t_not_u8.c  t_or_u8.c  t_sub_q7.c  t_sub_u8_q7.c  t_xor_u8.c
testsuite/complex/f32/: Makefile  Makefile.am  Makefile.in  conj_f32.m  dot_f32.m  dot_typ2_f32.m  mag_f32.m  mag_squared_f32.m  mult_f32.m  real_f32.m  t_cconj_f32.c  t_cdprod_f32.c  t_cdprod_typ2_f32.c  t_cmag_f32.c  t_cmag_sqr_f32.c  t_cmul_f32.c  t_cmul_real_f32.c
testsuite/complex/q15/: Makefile  Makefile.am  Makefile.in  cmplx_dot_q15.m  cmplx_dot_typ2_q15.m  cmplx_mult_q15.m  conj_q15.m  data_generator_q15.c  mag_squared_q15.m  real_q15.m  sqrt_q15.m  t_cconj_q15.c  t_cdprod_q15.c  t_cdprod_q15_typ2.c  t_cmag_hp_q15.c  t_cmag_q15.c  t_cmag_sqr_q15.c  t_cmul_q15.c  t_cmul_real_q15.c
testsuite/complex/q31/: Makefile  Makefile.am  Makefile.in  cmplx_dot_typ2_q31.m  conj_q31.m  data_twoin_rand_q31.c  dot_q31.m  mag_squared_q31.m  mult_cmplx_q31.m  q2int_q31.m  real_q31.m  sqrt_q31.m  t_cconj_q31.c  t_cdprod_q31.c  t_cdprod_q31_typ2.c  t_cmag_q31.c  t_cmag_sqr_q31.c  t_cmul_q31.c  t_cmul_real_q31.c
testsuite/controller/clark/: Makefile.am  Makefile.in  t_clarke_f32.c  t_clarke_q31.c  t_inv_clarke_f32.c  t_inv_clarke_q31.c  t_inv_park_f32.c  t_inv_park_q31.c  t_park_f32.c  t_park_q31.c
testsuite/controller/pid/: Makefile.am  Makefile.in  t_pid_f32.c  t_pid_q15.c  t_pid_q31.c
testsuite/distance/boolean/: Makefile.am  Makefile.in  boolean_dist_TT_FF_TF_FT.m  dice_dist.m  hamming_dist.m  jaccard_dist.m  kulsinski_dist.m  rogerstanimoto_dist.m  russellrao_dist.m  sokalmichener_dist.m  sokalsneath_dist.m  t_bdist_dice_u32_f32.c  t_bdist_hamming_u32_f32.c  t_bdist_jaccard_u32_f32.c  t_bdist_kulsinski_u32_f32.c  t_bdist_rogers_tanimoto_u32_f32.c  t_bdist_russell_rao_u32_f32.c  t_bdist_sokal_michener_u32_f32.c  t_bdist_sokal_sneath_u32_f32.c  t_bdist_yule_u32_f32.c  yule_dist.m
testsuite/distance/float/: Makefile.am  Makefile.in  braycurtis_dist_f32.m  canberra_dist_f32.m  chebyshev_dist_f32.m  cityblock_dist_f32.m  corr_dist_f32.m  cos_dist_f32.m  euclidean_dist_f32.m  jensenshannon_dist_f32.m  minkowski_dist_f32.m  t_dist_bray_curtis_f32.c  t_dist_canberra_f32.c  t_dist_chebyshev_f32.c  t_dist_city_block_f32.c  t_dist_corr_f32.c  t_dist_cos_f32.c  t_dist_euclidean_f32.c  t_dist_jensen_shannon_f32.c  t_dist_minkowski_f32.c
testsuite/filtering/Biquad_Cascade/: Makefile  Makefile.am  Makefile.in  biquad_cascade_df1_f32.m  biquad_cascade_df1_q15.m  biquad_cascade_df1_q31.m  biquad_cascade_df2T_f32.m  biquad_cascade_df2T_f64.m  biquad_cascade_stereo_df2T_f32.m  bq_df1_fast_q15.m  data_generator_f32.c  data_generator_f64.c  data_generator_q31.c  t_bq_df1_32x64_q31.c  t_bq_df1_f32.c  t_bq_df1_fast_q15.c  (+6 more)
testsuite/unit_performance/: Makefile.am  Makefile.in  ae350-xip.ld  find_cflags.sh  gdb-ice-riscv32.exp  gdb-ice-riscv32_boardfarm.exp  gdb-ice-riscv64.exp  gdb-ice-riscv64_boardfarm.exp  gdb-ice.exp  gen_lib_for_compare_keil.sh  gen_perf_benchmarks.sh  get_all_pf.sh  get_all_pf_on_board.sh  handrun.sh  nds32-sim-wrapper-d1088-v3  nds32-sim-wrapper-d1337-v3  nds32-sim-wrapper-d15  nds32-sim-wrapper-n1068-v3  nds32-sim-wrapper-n705-v3m  nds32-sim-wrapper-n801-v3m  nds32-sim-wrapper-n968-v3  nds32-sim-wrapper-on-board  nds32.ld  nds32le-elf-mculib-v3-d10.dynamic.user.conf  nds32le-elf-mculib-v3-d10.gdb.conf  nds32le-elf-mculib-v3-d10.user.conf  nds32le-elf-mculib-v3-d13.user.conf  nds32le-elf-mculib-v3-d15.user.conf  nds32le-elf-mculib-v3-n10.user.conf  nds32le-elf-mculib-v3.user.conf  nds32le-elf-mculib-v3f-n13.user.conf  nds32le-elf-mculib-v3m-n7.user.conf  nds32le-elf-mculib-v3m.user.conf  nds32le-elf-mculib-v3s-n10.user.conf  perfcount_compare_with_keil.csv.sh  riscv32-elf-mculib-v5-d25.user.conf  riscv32-elf-mculib-v5-d45.user.conf  riscv32-elf-mculib-v5-n25.user.conf  riscv32-sim-wrapper-boardfarm  riscv32-sim-wrapper-d25-v5  (+517 more)
(+3081 files in other folders)
