CFLAGS = -DDSP_TEST -I$(top_srcdir)/include -Wall -Wextra -Werror -DGETENV_SRCDIR=\"${srcdir}\"

clean-local:
		@rm t_* 2> /dev/null || true

SOURCES = t_pf_abs_f32.c  \
		  t_pf_abs_q15.c  \
		  t_pf_abs_q31.c  \
		  t_pf_abs_q7.c  \
		  t_pf_add_f32.c  \
		  t_pf_add_q15.c  \
		  t_pf_add_q31.c  \
		  t_pf_add_q7.c  \
		  t_pf_arctan_f32.c  \
		  t_pf_arctan_q15.c  \
		  t_pf_arctan_q31.c  \
		  t_pf_atan2_q15.c  \
		  t_pf_atan2_q31.c  \
		  t_pf_biquad_df1_f32.c \
		  t_pf_biquad_df1_q15.c \
		  t_pf_biquad_df1_q31.c \
		  t_pf_biquad_df1_32x64_q31.c \
		  t_pf_biquad_df2T_f32.c \
		  t_pf_biquad_df2T_f64.c \
		  t_pf_biquad_stereo_df2T_f32.c \
		  t_pf_cfft_radix2_f32.c \
		  t_pf_cfft_radix2_q15.c \
		  t_pf_cfft_radix2_q31.c \
		  t_pf_cfft_radix4_f32.c \
		  t_pf_cfft_radix4_q15.c \
		  t_pf_cfft_radix4_q31.c \
		  t_pf_cfft_f32.c \
		  t_pf_cfft_q15.c \
		  t_pf_cfft_q31.c \
		  t_pf_cifft_f32.c \
		  t_pf_cifft_q15.c \
		  t_pf_cifft_q31.c \
		  t_pf_clx_conj_f32.c \
		  t_pf_clx_conj_q15.c \
		  t_pf_clx_conj_q31.c \
		  t_pf_clx_dot_prod_f32.c \
		  t_pf_clx_dot_prod_q15.c \
		  t_pf_clx_dot_prod_q31.c \
		  t_pf_clx_mag_f32.c \
		  t_pf_clx_mag_q15.c \
		  t_pf_clx_mag_q31.c \
		  t_pf_clx_mag_sqr_f32.c \
		  t_pf_clx_mag_sqr_q15.c \
		  t_pf_clx_mag_sqr_q31.c \
		  t_pf_clx_mul_f32.c \
		  t_pf_clx_mul_q15.c \
		  t_pf_clx_mul_q31.c \
		  t_pf_clx_mul_real_f32.c \
		  t_pf_clx_mul_real_q15.c \
		  t_pf_clx_mul_real_q31.c \
		  t_pf_conv_f32.c \
		  t_pf_conv_q15.c \
		  t_pf_conv_q31.c \
		  t_pf_conv_q7.c \
		  t_pf_conv_partial_f32.c \
		  t_pf_conv_partial_q31.c \
		  t_pf_conv_partial_q15.c \
		  t_pf_conv_partial_q7.c \
		  t_pf_corr_f32.c \
		  t_pf_corr_q15.c \
		  t_pf_corr_q31.c \
		  t_pf_corr_q7.c \
		  t_pf_cos_f32.c \
		  t_pf_cos_q15.c \
		  t_pf_cos_q31.c   \
		  t_pf_dcmfir_f32.c \
		  t_pf_dcmfir_q15.c \
		  t_pf_dcmfir_q31.c \
		  t_pf_dct4_f32.c   \
		  t_pf_dct4_q15.c   \
		  t_pf_dct4_q31.c  \
		  t_pf_idct4_f32.c   \
		  t_pf_idct4_q15.c   \
		  t_pf_idct4_q31.c  \
		  t_pf_dct_f32.c   \
		  t_pf_dct_q15.c   \
		  t_pf_dct_q31.c   \
		  t_pf_div_f32.c     \
		  t_pf_div_q31.c     \
		  t_pf_dot_prod_f32.c \
		  t_pf_dot_prod_q15.c \
		  t_pf_dot_prod_q31.c \
		  t_pf_dot_prod_q7.c  \
		  t_pf_fir_f32.c     \
		  t_pf_fir_q15.c     \
		  t_pf_fir_q31.c     \
		  t_pf_fir_q7.c      \
		  t_pf_lfir_f32.c    \
		  t_pf_lfir_q15.c    \
		  t_pf_lfir_q31.c    \
		  t_pf_liir_f32.c    \
		  t_pf_liir_q15.c    \
		  t_pf_liir_q31.c    \
		  t_pf_lms_f32.c     \
		  t_pf_lms_q15.c     \
		  t_pf_lms_q31.c     \
		  t_pf_mat_add_f32.c \
		  t_pf_mat_add_q15.c \
		  t_pf_mat_add_q31.c \
		  t_pf_mat_inv_f32.c \
		  t_pf_mat_mul_f32.c  \
		  t_pf_mat_mul_f64.c  \
		  t_pf_mat_mul_q15.c  \
		  t_pf_mat_mul_q31.c  \
		  t_pf_mat_scale_f32.c \
		  t_pf_mat_scale_q15.c \
		  t_pf_mat_scale_q31.c \
		  t_pf_mat_sub_f32.c   \
		  t_pf_mat_sub_q15.c   \
		  t_pf_mat_sub_q31.c  \
		  t_pf_mat_trans_f32.c \
		  t_pf_mat_trans_q15.c \
		  t_pf_mat_trans_q31.c \
		  t_pf_max_f32.c      \
		  t_pf_max_q15.c      \
		  t_pf_max_q31.c      \
		  t_pf_max_q7.c       \
		  t_pf_mean_f32.c     \
		  t_pf_mean_q15.c     \
		  t_pf_mean_q31.c     \
		  t_pf_mean_q7.c      \
		  t_pf_min_f32.c    \
		  t_pf_min_q15.c    \
		  t_pf_min_q31.c    \
		  t_pf_min_q7.c     \
		  t_pf_mul_f32.c    \
		  t_pf_mul_q15.c    \
		  t_pf_mul_q31.c    \
		  t_pf_mul_q7.c     \
		  t_pf_neg_f32.c    \
		  t_pf_neg_q15.c    \
		  t_pf_neg_q31.c    \
		  t_pf_neg_q7.c     \
		  t_pf_nlms_f32.c   \
		  t_pf_nlms_q15.c   \
		  t_pf_nlms_q31.c   \
		  t_pf_offset_f32.c \
		  t_pf_offset_q15.c \
		  t_pf_offset_q31.c \
		  t_pf_offset_q7.c  \
		  t_pf_rfft_f32.c   \
		  t_pf_rfft_q15.c   \
		  t_pf_rfft_q31.c   \
		  t_pf_rfft_fast_f32.c   \
		  t_pf_rfft_fast_q15.c   \
		  t_pf_rfft_fast_q31.c   \
		  t_pf_rifft_f32.c   \
		  t_pf_rifft_q15.c   \
		  t_pf_rifft_q31.c   \
		  t_pf_rifft_fast_f32.c   \
		  t_pf_rifft_fast_q15.c   \
		  t_pf_rifft_fast_q31.c   \
		  t_pf_rms_f32.c    \
		  t_pf_rms_q15.c    \
		  t_pf_rms_q31.c    \
		  t_pf_scale_f32.c  \
		  t_pf_scale_q15.c  \
		  t_pf_scale_q31.c  \
		  t_pf_scale_q7.c   \
		  t_pf_sin_f32.c    \
		  t_pf_sin_q15.c    \
		  t_pf_sin_q31.c    \
		  t_pf_sos_f32.c    \
		  t_pf_sos_q15.c    \
		  t_pf_sos_q31.c    \
		  t_pf_sos_q7.c     \
		  t_pf_spafir_f32.c \
		  t_pf_spafir_q15.c \
		  t_pf_spafir_q31.c \
		  t_pf_spafir_q7.c  \
		  t_pf_sqrt_f32.c   \
		  t_pf_sqrt_q15.c   \
		  t_pf_sqrt_q31.c   \
		  t_pf_std_f32.c    \
		  t_pf_std_q15.c       \
		  t_pf_std_q31.c       \
		  t_pf_sub_f32.c       \
		  t_pf_sub_q15.c       \
		  t_pf_sub_q31.c       \
		  t_pf_sub_q7.c        \
		  t_pf_dup_f32.c       \
		  t_pf_dup_q31.c       \
		  t_pf_dup_q15.c       \
		  t_pf_dup_q7.c        \
		  t_pf_set_f32.c 	   \
		  t_pf_set_q15.c 	   \
		  t_pf_set_q31.c	   \
		  t_pf_set_q7.c  	   \
		  t_pf_convert_f32_q15.c \
          t_pf_convert_f32_q31.c \
          t_pf_convert_f32_q7.c \
          t_pf_convert_q15_f32.c \
          t_pf_convert_q15_q31.c \
          t_pf_convert_q15_q7.c \
          t_pf_convert_q31_f32.c \
          t_pf_convert_q31_q15.c \
          t_pf_convert_q31_q7.c \
          t_pf_convert_q7_f32.c \
          t_pf_convert_q7_q15.c \
          t_pf_convert_q7_q31.c \
		  t_pf_upsplfir_f32.c  \
		  t_pf_upsplfir_q15.c  \
		  t_pf_upsplfir_q31.c  \
		  t_pf_var_f32.c       \
		  t_pf_var_q15.c       \
		  t_pf_var_q31.c       \
		  t_pf_pid_f32.c       \
		  t_pf_pid_q15.c       \
		  t_pf_pid_q31.c       \
		  t_pf_shift_q15.c     \
		  t_pf_shift_q31.c     \
		  t_pf_shift_q7.c      \
		  t_pf_park_f32.c      \
		  t_pf_park_q31.c      \
		  t_pf_inv_park_f32.c  \
		  t_pf_inv_park_q31.c  \
		  t_pf_clarke_f32.c    \
		  t_pf_clarke_q31.c    \
		  t_pf_inv_clarke_f32.c  \
		  t_pf_inv_clarke_q31.c

check_PROGRAM =  t_pf_abs_f32 \
			t_pf_abs_q15 \
			t_pf_abs_q31  \
		  t_pf_abs_q7  \
		  t_pf_add_f32  \
		  t_pf_add_q15  \
		  t_pf_add_q31  \
		  t_pf_add_q7  \
		  t_pf_arctan_f32  \
		  t_pf_arctan_q15  \
		  t_pf_arctan_q31  \
		  t_pf_atan2_q15  \
		  t_pf_atan2_q31  \
		  t_pf_biquad_df1_f32 \
		  t_pf_biquad_df1_q15 \
		  t_pf_biquad_df1_q31 \
		  t_pf_biquad_df1_32x64_q31 \
		  t_pf_biquad_df2T_f32 \
		  t_pf_biquad_df2T_f64 \
		  t_pf_biquad_df2T_stereo_f32 \
		  t_pf_cfft_radix2_f32 \
		  t_pf_cfft_radix2_q15 \
		  t_pf_cfft_radix2_q31 \
		  t_pf_cfft_radix4_f32 \
		  t_pf_cfft_radix4_q15 \
		  t_pf_cfft_radix4_q31 \
		  t_pf_cfft_f32 \
		  t_pf_cfft_q15 \
		  t_pf_cfft_q31 \
		  t_pf_cifft_f32 \
		  t_pf_cifft_q15 \
		  t_pf_cifft_q31 \
		  t_pf_clx_conj_f32 \
		  t_pf_clx_conj_q15 \
		  t_pf_clx_conj_q31 \
		  t_pf_clx_dot_prod_f32 \
		  t_pf_clx_dot_prod_q15 \
		  t_pf_clx_dot_prod_q31 \
		  t_pf_clx_mag_f32 \
		  t_pf_clx_mag_q15 \
		  t_pf_clx_mag_q31 \
		  t_pf_clx_mag_sqr_f32 \
		  t_pf_clx_mag_sqr_q15 \
		  t_pf_clx_mag_sqr_q31 \
		  t_pf_clx_mul_f32 \
		  t_pf_clx_mul_q15 \
		  t_pf_clx_mul_q31 \
		  t_pf_clx_mul_real_f32 \
		  t_pf_clx_mul_real_q15 \
		  t_pf_clx_mul_real_q31 \
		  t_pf_conv_f32 \
		  t_pf_conv_q15 \
		  t_pf_conv_q31 \
		  t_pf_conv_q7 \
		  t_pf_conv_partial_f32 \
		  t_pf_conv_partial_q31 \
		  t_pf_conv_partial_q15 \
		  t_pf_conv_partial_q7 \
		  t_pf_corr_f32 \
		  t_pf_corr_q15 \
		  t_pf_corr_q31 \
		  t_pf_corr_q7 \
		  t_pf_cos_f32 \
		  t_pf_cos_q15 \
		  t_pf_cos_q31   \
		  t_pf_dcmfir_f32 \
		  t_pf_dcmfir_q15 \
		  t_pf_dcmfir_q31 \
		  t_pf_dct4_f32   \
		  t_pf_dct4_q15   \
		  t_pf_dct4_q31  \
		  t_pf_dct_f32   \
		  t_pf_dct_q15   \
		  t_pf_dct_q31   \
		  t_pf_idct4_f32   \
		  t_pf_idct4_q15   \
		  t_pf_idct4_q31   \
		  t_pf_div_f32     \
		  t_pf_div_q31     \
		  t_pf_dot_prod_f32 \
		  t_pf_dot_prod_q15 \
		  t_pf_dot_prod_q31 \
		  t_pf_dot_prod_q7  \
		  t_pf_fir_f32     \
		  t_pf_fir_q15     \
		  t_pf_fir_q31     \
		  t_pf_fir_q7      \
		  t_pf_lfir_f32    \
		  t_pf_lfir_q15    \
		  t_pf_lfir_q31    \
		  t_pf_liir_f32  \
		  t_pf_liir_q15    \
		  t_pf_liir_q31    \
		  t_pf_lms_f32     \
		  t_pf_lms_q15     \
		  t_pf_lms_q31     \
		  t_pf_mat_add_f32 \
		  t_pf_mat_add_q15 \
		  t_pf_mat_add_q31 \
		  t_pf_mat_inv_f32 \
		  t_pf_mat_mul_f32  \
		  t_pf_mat_mul_f64  \
		  t_pf_mat_mul_q15  \
		  t_pf_mat_mul_q31  \
		  t_pf_mat_scale_f32 \
		  t_pf_mat_scale_q15 \
		  t_pf_mat_scale_q31 \
		  t_pf_mat_sub_f32   \
		  t_pf_mat_sub_q15   \
		  t_pf_mat_sub_q31  \
		  t_pf_mat_trans_f32 \
		  t_pf_mat_trans_q15 \
		  t_pf_mat_trans_q31 \
		  t_pf_max_f32      \
		  t_pf_max_q15      \
		  t_pf_max_q31      \
		  t_pf_max_q7       \
		  t_pf_mean_f32     \
		  t_pf_mean_q15     \
		  t_pf_mean_q31     \
		  t_pf_mean_q7      \
		  t_pf_min_f32    \
		  t_pf_min_q15    \
		  t_pf_min_q31    \
		  t_pf_min_q7     \
		  t_pf_mul_f32    \
		  t_pf_mul_q15    \
		  t_pf_mul_q31    \
		  t_pf_mul_q7     \
		  t_pf_neg_f32    \
		  t_pf_neg_q15    \
		  t_pf_neg_q31    \
		  t_pf_neg_q7     \
		  t_pf_nlms_f32   \
		  t_pf_nlms_q15   \
		  t_pf_nlms_q31   \
		  t_pf_offset_f32 \
		  t_pf_offset_q15 \
		  t_pf_offset_q31 \
		  t_pf_offset_q7  \
		  t_pf_rfft_f32   \
		  t_pf_rfft_q15   \
		  t_pf_rfft_q31   \
		  t_pf_rfft_fast_f32   \
		  t_pf_rfft_fast_q15   \
		  t_pf_rfft_fast_q31   \
		  t_pf_rifft_f32  \
		  t_pf_rifft_q15  \
		  t_pf_rifft_q31  \
		  t_pf_rifft_fast_f32  \
		  t_pf_rifft_fast_q15  \
		  t_pf_rifft_fast_q31  \
		  t_pf_rms_f32    \
		  t_pf_rms_q15    \
		  t_pf_rms_q31    \
		  t_pf_scale_f32  \
		  t_pf_scale_q15  \
		  t_pf_scale_q31  \
		  t_pf_scale_q7   \
		  t_pf_sin_f32    \
		  t_pf_sin_q15    \
		  t_pf_sin_q31    \
		  t_pf_sos_f32    \
		  t_pf_sos_q15    \
		  t_pf_sos_q31    \
		  t_pf_sos_q7     \
		  t_pf_spafir_f32 \
		  t_pf_spafir_q15 \
		  t_pf_spafir_q31 \
		  t_pf_spafir_q7  \
		  t_pf_sqrt_f32   \
		  t_pf_sqrt_q15   \
		  t_pf_sqrt_q31   \
		  t_pf_std_f32    \
		  t_pf_std_q15       \
		  t_pf_std_q31       \
		  t_pf_sub_f32       \
		  t_pf_sub_q15       \
		  t_pf_sub_q31       \
		  t_pf_sub_q7        \
		  t_pf_dup_f32       \
		  t_pf_dup_q31       \
		  t_pf_dup_q15       \
		  t_pf_dup_q7        \
		  t_pf_set_f32       \
		  t_pf_set_q31       \
		  t_pf_set_q15       \
		  t_pf_set_q7        \
          t_pf_convert_f32_q15 \
          t_pf_convert_f32_q31 \
          t_pf_convert_f32_q7 \
          t_pf_convert_q15_f32 \
          t_pf_convert_q15_q31 \
          t_pf_convert_q15_q7 \
          t_pf_convert_q31_f32 \
          t_pf_convert_q31_q15 \
          t_pf_convert_q31_q7 \
          t_pf_convert_q7_f32 \
          t_pf_convert_q7_q15 \
          t_pf_convert_q7_q31 \
		  t_pf_upsplfir_f32  \
		  t_pf_upsplfir_q15  \
		  t_pf_upsplfir_q31  \
		  t_pf_var_f32       \
		  t_pf_var_q15       \
		  t_pf_var_q31       \
		  t_pf_pid_f32       \
		  t_pf_pid_q15       \
		  t_pf_pid_q31       \
		  t_pf_shift_q15     \
		  t_pf_shift_q31     \
		  t_pf_shift_q7      \
		  t_pf_park_f32      \
		  t_pf_park_q31      \
		  t_pf_inv_park_f32  \
		  t_pf_inv_park_q31  \
		  t_pf_clarke_f32    \
		  t_pf_clarke_q31    \
		  t_pf_inv_clarke_f32  \
		  t_pf_inv_clarke_q31

TESTS = $(check_PROGRAM)

$(check_PROGRAM): $(SOURCES) $(top_srcdir)/testsuite/include/nds32_test_accuracy.h
	$(CC) $(CFLAGS) $(CFLAGS_DSP) -o $@ $(srcdir)/$@.c $(top_builddir)/libdsp.a -lm
